# kappa-core

./: .clang-tidy  .gitattributes  .pre-commit-config.yaml  ARCHITECTURE.md  Application_8h.html  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  EventBus_8h.html  EventBus_8h__dep__incl.map  EventBus_8h__dep__incl.md5  EventBus_8h__incl.map  EventBus_8h__incl.md5  EventBus_8h_source.html  Event_8h.html  Event_8h.js  Event_8h__dep__incl.map  Event_8h__dep__incl.md5  Event_8h_source.html  Layer_8h.html  Layer_8h__dep__incl.map  Layer_8h__dep__incl.md5  Layer_8h__incl.map  Layer_8h__incl.md5  Layer_8h_source.html  Logger_8h.html  Logger_8h.js  Logger_8h__incl.map  Logger_8h__incl.md5  Logger_8h_source.html  README.md  README_8md.html  Texture_8h.html  Texture_8h.js  Texture_8h__incl.map  Texture_8h__incl.md5  (+75 more)
.github/workflows/: build.yml  coverage.yml  docs.yml  format.yml  pre-commit.yml  static-analysis.yml  tests.yml
api/html/: Application_8h.js  EventBus_8h.js  EventBus_8h__dep__incl.map  Event_8h__dep__incl.md5  Event_8h_source.html  Layer_8h.js  Layer_8h__incl.map  Layer_8h_source.html  Logger_8h_source.html  Texture_8h.html  Texture_8h__incl.md5  Version_8h.js  Version_8h_source.html  WindowStatePersistence_8h.html  WindowStatePersistence_8h.js  WindowStatePersistence_8h__incl.md5  WindowStatePersistence_8h_source.html  Window_8h__dep__incl.map  Window_8h__incl.md5  annotated.html  classKappa_1_1Application.js  classKappa_1_1EventBus.html  classKappa_1_1Layer.html  classKappa_1_1Logger.html  classKappa_1_1Texture_a7e279e8e47424c539e3f4eeb26694465_cgraph.map  classKappa_1_1Window-members.html  classKappa_1_1Window.html  classKappa_1_1WindowStatePersistence.html  classKappa_1_1WindowStatePersistence.js  files.html  functions_vars.html  namespaceKappa.html  namespaces.html  namespaces_dup.js  navtreedata.js  structKappa_1_1ApplicationSpecification__coll__graph.map  structKappa_1_1Position-members.html  structKappa_1_1Position.js  structKappa_1_1Size.html  structKappa_1_1Version.html  (+3 more)
api/html/search/: all_11.js  all_12.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_4.js  defines_0.js  defines_1.js  files_1.js  files_2.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_5.js  functions_7.js  functions_c.js  functions_e.js  functions_f.js  pages_0.js  pages_1.js  variables_0.js  variables_3.js  variables_6.js  variables_7.js
cmake/: CodeQuality.cmake
docs/: ARCHITECTURE.md  EXAMPLES.md
examples/: CMakeLists.txt
examples/events/: CMakeLists.txt  main.cpp
examples/layers/: CMakeLists.txt  main.cpp
examples/minimal/: CMakeLists.txt  main.cpp
include/: Application.h  Event.h  EventBus.h  Layer.h  Logger.h  Texture.h  Version.h  Window.h  WindowStatePersistence.h
include/Kappa/: Application.h  Event.h  EventBus.h  Layer.h  Logger.h  Version.h  WindowStatePersistence.h
scripts/: run-coverage.py
search/: all_0.js  all_1.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+11 more)
src/: Application.cpp  Logger.cpp  Texture.cpp  Window.cpp  WindowStatePersistence.cpp
tests/: CMakeLists.txt  TestApplication.cpp  TestEventBus.cpp  TestLayer.cpp  TestLogger.cpp  TestSimple.cpp  TestWindow.cpp  TestWindowStatePersistence.cpp
